# trade-control-web-hook

./: .gitignore  7-days.log.json  BUG-break-close-origin-seeded-from-warmup-bar.md  BUG-replay-golden-gate-not-enforced.md  BUG-replay-stop-fill-gap.md  BUG-too-low-closes-positions.md  BUNDLE_REPLAY_PROMPT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY-VM-RUNBOOK.md  DEPLOYED.md  ENGINE_REPLAY_RECORDING_PROMPT.md  MIGRATION-VM-POSTGRES.md  PARITY.md  README.md  REPLAY-PARITY-AUDIT.md  SCOPING-engine-v2-news.md  SCOPING-engine-v2-typed-geometry.md  SCOPING-entry-logic-simplification.md  SCOPING-oracle-db-swappable.md  SCOPING-pullback-prep.md  SCOPING-shared-candle-cache-puller.md  SCOPING-spread-hour-dst-local-time.md  SCOPING-spread-hour-rubbish-candle.md  SCOPING-sr-close-pattern-anchor.md  SPIKE-oracle-connectivity.md  SPIKE-oracle-findings.md  STAGING-DEPLOY.md  TEST-REPORT-amend-stop-on-open-position.md  TICK_REPLAY_TODO.md  TODO-PR1b-retire-drawn-line-generators.md  TODO-PR2-news-window-wallclock-gating.md  TODO-arm-datetime-and-sentiment.md  TODO-atr-buffer.md  TODO-breakeven-stop.md  TODO-bug-13.md  TODO-bug015-ttl-and-purge.md  TODO-journal-recording.md  TODO-journaller-tui.md  (+35 more)
.claude/: trade-calendar-maker
broker-oanda/: Cargo.toml
broker-oanda/src/: candles.rs  fx.rs  lib.rs  oanda.rs  risk.rs
broker-tradenation-adapter/: Cargo.toml
broker-tradenation-adapter/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: admin_client.rs  admin_secret.rs  calendar_bars.rs  control.rs  expiry.rs  forex_factory_cache.rs  history.rs  instruments.rs  interactive.rs  lib.rs  news_pattern.rs  pause_pattern.rs  prompts.rs  replay.rs  replay_args.rs  script_validator.rs  templates.rs  trade_patterns.rs
conventions/: Cargo.toml
core/: Cargo.toml  build.rs
core/src/: account.rs  allow_close_gate.rs  allow_entry_gate.rs  blackout_recreate.rs  blackout_widen.rs  broker.rs  candle_gate.rs  control_event.rs  dispatch.rs  dispatch_config.rs  incoming.rs  intent.rs  lib.rs  market_hours_baked.rs  ny_clock.rs  pause_gate.rs  pending_lifecycle.rs  plan_eval.rs  plan_sentiment.rs  plan_state.rs  position_view.rs  recording.rs  recover_entry.rs  retry_gate.rs  rounding.rs  rules.rs  sig.rs  signals.rs  spread_baseline_candle.rs  spread_blackout.rs  state.rs  sweep_gate.rs  tick_bundle.rs  trade_plan.rs  tunable.rs
core/src/account/: caps.rs  creds.rs  kind.rs  memstore.rs  metadata.rs  metadata_conformance.rs  store.rs
core/src/broker/: candles.rs
core/src/dispatch/: action.rs  action_result.rs  close.rs  control.rs  control_result.rs  enter.rs  invalidate.rs  seen.rs  shared.rs  veto.rs
core/src/intent/: blackout.rs  breakeven.rs  entry_level_veto.rs  expiry.rs  mw_resolution.rs  mw_state.rs  prep_req.rs  resolution.rs  sl_spread_floor.rs
core/src/intent/blackout/: baked.rs  derive.rs  week_mask.rs
core/src/signals/: atr.rs  band_anchor.rs  detect.rs  metrics.rs  state_machine.rs
core/src/state/: conformance.rs
docs/: FOLLOWUP-retire-spread-sampler.md  SPREAD-HOUR-DST-STATE.md  spread-baseline-plan.md
engine/: Cargo.toml
engine-v2/: Cargo.toml
engine-v2/src/: cross.rs  driver.rs  effect.rs  executor.rs  facts.rs  late_entry.rs  lib.rs  plan.rs  rule.rs  rules.rs  world.rs
engine-v2/src/facts/: fact_kind.rs
engine-v2/src/plan/: line_name.rs
engine-v2/src/rules/: break_and_close.rs  enter.rs  expiry.rs  invalidate.rs  pause.rs  retest.rs
engine-v2/tests/: break_and_close.rs  enter.rs  expiry.rs  invalidate.rs  parity.rs  pause.rs  retest.rs
journal/: Cargo.toml  build.rs
journal/src/: app.rs  cli.rs  clipboard.rs  content.rs  divergence.rs  jobs.rs  keys.rs  main.rs  plan.rs  record.rs  screen.rs  timeline.rs  tv.rs  ui.rs
journal/src/ui/: compare.rs  infobar.rs  list.rs  popup.rs  replay.rs  timeline.rs
journal/tests/fixtures/: plan_export.json  plan_list.yaml  plan_timeline.json  replay_report.txt
market-hours-gen/: Cargo.toml
market-hours-gen/src/: compute.rs  fetch.rs  lib.rs  render.rs  universe.rs
news-sentiment-tv/: Cargo.toml
news-sentiment-tv/src/: lib.rs  plan_snapshot.rs  sentiment.rs
news-sentiment-tv/src/sentiment/: parser.rs  rules.rs
pine-scripts/: candle-signals-v2.pine
roadmap/: book.toml
scripts/: refresh-tn-session.sh  tv_arm_hs.py
spread-baseline-gen/: Cargo.toml
spread-baseline-gen/src/: compute.rs  fetch.rs  lib.rs  render.rs  universe.rs
src/: accounts.rs  admin.rs  adopt.rs  allow_close_gate.rs  allow_entry_gate.rs  candle_gate.rs  cli.rs  cron.rs  crypto.rs  diag.rs  incoming.rs  intent.rs  lib.rs  market_blackout.rs  market_info.rs  oanda.rs  r2_purge.rs  recording.rs  recover_entry.rs  retry_gate.rs  risk.rs  spread_blackout.rs  state.rs  tick_recording.rs  tn_login.rs  tn_login_helpers.rs  too_close.rs  tracing_console.rs  tradenation_adapter.rs
trade-control-cron/: Cargo.toml
trade-control-cron/src/: blackout_apply.rs  blackout_cancel.rs  blackout_hours.rs  blackout_restore.rs  blackout_watch.rs  breakeven_watch.rs  broker_handle.rs  constants.rs  engine.rs  lib.rs  seam.rs  spread_lifecycle.rs  sweep.rs
trade-control-types-v2/: Cargo.toml
trading-view/: Cargo.toml
tv-arm/: Cargo.toml  TODO.md  build.rs
tv-arm/assets/: tv_mcp_template.js
tv-arm/src/: alert_spec.rs  args.rs  create_alerts.rs  drawings.rs  geometry.rs  instrument_recovery.rs  instrument_resolution.rs  main.rs  manifest.rs  mw_geometry.rs  news_marker.rs  news_window.rs  pair_lines.rs  pipeline.rs  position_trade.rs  post_outcome.rs  precision.rs  register_post.rs  replay.rs  roles.rs  sentiment.rs  spread.rs  start_note.rs  timeframe.rs  trade_plan_build.rs  tv_mcp.rs
tv-news/: Cargo.toml  TODO.md
worker/: Cargo.toml
worker/migrations/: 0001_state.sql  0002_accounts.sql  0003_recordings.sql  0004_order_bodies.sql
worker/src/: broker_factory.rs  config.rs  dispatch_config_native.rs  http.rs  lib.rs  main.rs  native_cron.rs  pg.rs  pg_accounts.rs  recording_pg.rs  scheduler.rs  secrets.rs
worker/tests/: e2e_dispatch.rs  pg_conformance.rs  pg_gc.rs  pg_metadata.rs  pg_recording.rs  pg_seen.rs  pg_snapshot.rs
(+91 files in other folders)
