[workspace]
resolver = "3"
members = ["broker-oanda", "broker-tradenation-adapter", "cli", "conventions", "core", "engine", "news-sentiment-tv", "spread-baseline-gen", "trade-control-cron", "trading-view", "tv-arm", "tv-news", "worker"]

# `tradenation-api` is consumed as a git dep by workspace members (`worker`,
# `cli`, `tv-arm`, …); its `ohlcv` module exposes `candle_model::Granularity` /
# `CandleData` from a candle-model vendored inside that git checkout. Members
# also depend on the local `candle-model`. Without this patch the two are
# distinct crates and the types don't unify (E0308). Redirect the git-sourced
# candle-model to the same local path so there is one crate.
[patch."https://github.com/matiu2/tradenation-api.git"]
candle-model = { path = "../candle-model" }
