[package]
name = "broker-oanda"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["alloc"] }
oanda-client = { version = "0.2.0", path = "../../oanda-client", default-features = false }
trade-control-core = { version = "0.1.0", path = "../core" }
tracing = "0.1"
