[package]
name = "broker-tradenation-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
broker-tradenation = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.10.0" }
candle-model = { version = "0.1.0", path = "../../candle-model" }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
trade-control-core = { version = "0.1.0", path = "../core" }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.3.0" }

[features]
# Forwards the underlying TradeNation SDK's wasm-randomness feature. The
# adapter itself is target-agnostic, but on wasm32 its `broker-tradenation` /
# `tradenation-api` deps pull in `getrandom`, which needs `wasm_js` to compile.
# The wasm worker already enables this on the git deps at the workspace root;
# this passthrough lets a downstream wasm crate (e.g. `trade-control-cron`)
# turn it on through the adapter without naming the git dep directly.
wasm_js = ["broker-tradenation/wasm_js", "tradenation-api/wasm_js"]
