[package]
name = "broker-tradenation-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
broker-tradenation = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.12.0", version = "0.10.0" }
candle-model = { version = "0.1.0", path = "../../candle-model" }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
trade-control-core = { version = "0.1.0", path = "../core" }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.12.0", version = "0.4.0" }
