[package]
name = "trade-control-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "encrypt-payload"
path = "src/bin/encrypt_payload.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
dialoguer = { version = "0.12.0", default-features = false, features = ["fuzzy-select"] }
getrandom = "0.4.2"
hex = "0.4.3"
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
trade-control-core = { version = "0.1.0", path = "../core", features = ["cli"] }
