[package]
name = "trade-control-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "trade-control"
path = "src/bin/trade_control.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
dialoguer = { version = "0.12.0", default-features = false, features = ["fuzzy-select", "password"] }
forex-factory = { git = "https://github.com/matiu2/forex-factory.git", version = "0.2.0", default-features = false, features = ["native-tls", "brotli", "http2"] }
getrandom = "0.4.2"
hex = "0.4.3"
instrument-lookup = { version = "0.3.0", path = "../../instrument-lookup" }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
trade-calendar-maker = { version = "0.1.0", path = "../../../trade-calendar-maker" }
trade-control-conventions = { version = "0.1.0", path = "../conventions" }
trade-control-core = { version = "0.1.0", path = "../core", features = ["cli"] }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.3.0" }
tradenation-instrument-cache = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.2.0" }

[dev-dependencies]
tempfile = "3.27.0"
