[package]
name = "trade-control-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.44", default-features = false, features = ["alloc", "serde"] }
hex = "0.4.3"
hmac = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
subtle = "2.6.1"

[features]
default = []
cli = []
serde_json = []

[dev-dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
pollster = "0.4.0"
serde_json = "1.0.149"
