[package]
name = "trade-control-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.44", default-features = false, features = ["alloc", "serde"] }
hex = "0.4.3"
hmac = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
subtle = "2.6.1"
# Optional: only the `MemStateStore` impl needs it, and only when exposed to
# non-test consumers via `test-support` (in `cfg(test)` the dev-dependency
# below covers it). Kept off the default/wasm build.
serde_json = { version = "1.0.149", optional = true }
tracing = "0.1.44"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rhai = { version = "1.25.0", default-features = false, features = ["std", "wasm-bindgen", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rhai = { version = "1.25.0", default-features = false, features = ["std", "serde"] }

[features]
default = []
cli = []
serde_json = []
# Exposes `MemStateStore` (the in-memory `StateStore`) to non-test consumers —
# the native replay CLI drives the engine against it offline. Off by default so
# it never leaks into the wasm worker release build. Pulls in `serde_json`
# (`MemStateStore` (de)serializes state values) and `chrono/clock` (it stamps
# TTLs with `Utc::now()`); both are dev-deps in `cfg(test)`, so this only matters
# for the non-test CLI build.
test-support = ["dep:serde_json", "chrono/clock"]

[dev-dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
pollster = "0.4.0"
serde_json = "1.0.149"

[build-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
