[package]
name = "trade-control-engine-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
trade-control-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
serde_json = "1.0.150"
trade-control-engine = { path = "../engine" }
