[package]
name = "trade-control-engine-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
trade-control-core = { version = "0.1.0", path = "../core" }
trade-control-types-v2 = { version = "0.1.0", path = "../trade-control-types-v2" }

[dev-dependencies]
serde_json = "1.0.150"
