[package]
name = "journal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.28"
instrument-lookup = { version = "0.4.0", path = "../../instrument-lookup" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.36", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
