[package]
name = "market-hours-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-model = { version = "0.1.0", path = "../../candle-model" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
instrument-lookup = { version = "0.4.0", path = "../../instrument-lookup" }
oanda-client = { version = "0.2.0", path = "../../oanda-client" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.13.0", version = "0.4.1" }
