[package]
name = "spread-baseline-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
broker-tradenation = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.11.0", version = "0.10.0" }
broker-tradenation-adapter = { version = "0.1.0", path = "../broker-tradenation-adapter" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
instrument-lookup = { version = "0.3.0", path = "../../instrument-lookup" }
oanda-client = { version = "0.2.0", path = "../../oanda-client" }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trade-control-core = { version = "0.1.0", path = "../core" }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.11.0", version = "0.3.0" }
