[package]
name = "tv-arm"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["serde", "alloc", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
hex = "0.4.3"
instrument-lookup = { version = "0.4", path = "../../instrument-lookup" }
news-sentiment-tv = { version = "0.1.0", path = "../news-sentiment-tv" }
oanda-client = { version = "0.2.0", path = "../../oanda-client" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trade-calendar-maker = { version = "0.1.0", path = "../../../trade-calendar-maker" }
trade-control-cli = { version = "0.2.0", path = "../cli" }
trade-control-conventions = { version = "0.1.0", path = "../conventions" }
trade-control-core = { version = "0.1.0", path = "../core" }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.13.0", version = "0.4.1" }
trading-view = { version = "0.1.0", path = "../trading-view" }

[dev-dependencies]
toml = "1.1.2"
