[package]
name = "trade-control-worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "trade_control_worker"
path = "src/lib.rs"

[[bin]]
name = "trade-control-worker"
path = "src/main.rs"

[[bin]]
name = "trade-control-accounts"
path = "src/bin/accounts.rs"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json", "query"] }
broker-oanda = { version = "0.1.0", path = "../broker-oanda" }
broker-tradenation = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.10.0" }
broker-tradenation-adapter = { version = "0.1.0", path = "../broker-tradenation-adapter" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros", "json", "migrate"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trade-control-core = { version = "0.1.0", path = "../core" }
trade-control-cron = { version = "0.1.0", path = "../trade-control-cron" }
tradenation-api = { git = "https://github.com/matiu2/tradenation-api.git", tag = "broker-tradenation-v0.10.0", version = "0.3.0" }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
trade-control-core = { path = "../core", features = ["test-support"] }
